@@ -21,7 +21,6 @@ import org.elasticsearch.xpack.core.security.authc.ldap.support.LdapSearchScope;
 import org.elasticsearch.xpack.security.authc.ldap.support.LdapSession.GroupsResolver;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -59,18 +58,17 @@ class SearchGroupsResolver implements GroupsResolver {
                         Collection<Attribute> attributes, ActionListener<List<String>> listener) {
         getUserId(userDn, attributes, connection, timeout, ActionListener.wrap((userId) -> {
             if (userId == null) {
-                listener.onResponse(Collections.emptyList());
+                listener.onResponse(List.of());
             } else {
                 try {
                     Filter userFilter = createFilter(filter, userId);
-
                     search(connection, baseDn, scope.scope(), userFilter,
                             Math.toIntExact(timeout.seconds()), ignoreReferralErrors,
                             ActionListener.wrap(
                                     (results) -> listener.onResponse(results
                                             .stream()
                                             .map((r) -> r.getDN())
-                                            .collect(Collectors.toList())
+                                            .collect(Collectors.toUnmodifiableList())
                                     ),
                                     listener::onFailure),
                             SearchRequest.NO_ATTRIBUTES);
